- Fixes layout width issue that causes horizontal scrolling. - Changes header bg color from #cc6861 to #b1180d. - Updates README file.

--- a/webapp/app/styles/main.scss
+++ b/webapp/app/styles/main.scss
@@ -43,7 +43,7 @@ p, ul{
 /* Custom page header */
 .header {
   padding: 10px 0;
-  background: #CC6861;
+  background: #b1180d;
   color: white;
   /* Make the masthead heading the same height as the navigation */
   h3 {
